<resources>
    <!-- Main Starting activity -->
    <string name="app_name">Bathing Sites</string>
    <string name="floating_action_button_description">add bathing site</string>
    <!-- Main Starting activity settings -->
    <string name="main_menu_setting">Settings</string>

    <!-- Custom bathing site component -->
    <string name="default_bathing_sites_title">%1$d bathing sites</string>
    <string name="bathing_site_image_description">Bathing site image</string>

    <!-- Add bathing site fragment -->
    <string name="degree_sign">°</string>
    <!-- Label names -->
    <string name="edit_text_bathing_site_name">Name:</string>
    <string name="edit_text_bathing_site_description">Description:</string>
    <string name="edit_text_bathing_site_address">Address:</string>
    <string name="edit_text_bathing_site_latitude">Latitude:</string>
    <string name="edit_text_bathing_site_longitude">Longitude:</string>
    <string name="edit_text_bathing_site_grade">Grade:</string>
    <string name="edit_text_bathing_site_water_temperature">Water temp:</string>
    <string name="edit_text_bathing_site_water_temperature_date">Date for temp:</string>
    <!-- Edit text hints/descriptions -->
    <string name="edit_text_bathing_site_name_hint">Enter name of bathing site</string>
    <string name="edit_text_bathing_site_description_hint">Enter description of bathing site</string>
    <string name="edit_text_bathing_site_address_hint">Enter address of bathing site</string>
    <string name="edit_text_bathing_site_latitude_hint">Enter latitude of site</string>
    <string name="edit_text_bathing_site_longitude_hint">Enter longitude of site</string>
    <string name="edit_text_bathing_site_grade_description">Rating of Bathing site</string>
    <string name="edit_text_bathing_site_water_temperature_hint">Enter temp of water</string>
    <string name="edit_text_bathing_site_water_temperature_date_hint">Enter date for temp</string>
    <!-- Add bathing site fragment settings -->
    <string name="add_bathing_site_clear">Clear</string>
    <string name="add_bathing_site_save">Save</string>
    <string name="add_bathing_site_show_weather">Show Weather</string>
    <string name="add_bathing_site_settings">Settings</string>
    <string name="cant_show_weather">Weather cannot be obtained.
        Please enter correct address or coordinates</string>

    <!-- Add bathing site activity -->
    <string name="add_bathing_site">Add bathing place</string>
    <string name="new_line">\n</string>
    <string name="space">&#160;</string>
    <!-- Error messages -->
    <string name="bathing_site_name_error">Name is required</string>
    <string name="bathing_site_location_error">Address or latitude/longitude is required</string>
    <!-- Save dialog -->
    <string name="dialog_title">Saved:</string>
    <string name="dialog_buttonText">OK</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <!-- Messages Preferences -->
    <string name="signature_title">Fetch weather data from</string>
    <!-- Sync Preferences -->
    <string name="store_weather_link_key">WeatherLink</string>
    <string name="store_weather_link">https://dt031g.programvaruteknik.nu/bathingsites/weather.php</string>
    <string name="store_weather_image_link">https://openweathermap.org/img/w/%1$s.png</string>

    <!-- Show weather dialog fragment -->
    <string name="weather_info_dialog_title">Current weather</string>

    <!-- Bathing site database -->
    <string name="name_of_the_database_file">bathing_site_database</string>
    <string name="successful_save">The bathing site has been saved</string>
    <string name="site_already_exists">The bathing site already exists</string>

</resources>